--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,273 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600;700&display=swap');
+
+html {
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 50px;
+	box-sizing: border-box;
+	color: white;
+	background: radial-gradient(circle, hsl(214, 47%, 23%), hsl(237, 49%, 15%) 100%);
+	overflow-x: hidden;
+	overflow-y: hidden;
+	user-select: none;
+}
+
+button {
+	font-family: 'Barlow Semi Condensed', sans-serif;
+	border: none;
+}
+
 .App {
-  text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border: 2px solid white;
+	width: 50%;
+	height: 15vh;
+	padding: 10px;
+	box-sizing: border-box;
+	border-radius: 20px;
+	max-width: 700px;
+	min-width: 360px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+	height: 90%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scoreboard {
+	height: 100%;
+	padding: 0px 25px;
+	box-sizing: border-box;
+	border-radius: 10px;
+	background-color: white;
+	color: black;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.scoreboard * {
+	margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#score {
+	font-size: 50px;
+	font-weight: 700;
+}
+
+.user-selection {
+	background-image: url(./images/bg-triangle.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 50%;
+	min-width: 375px;
+	height: 500px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding-top: 50px;
+}
+
+.top-buttons {
+	display: flex;
+	justify-content: space-between;
+	width: 50vw;
+	min-width: 375px;
+	max-width: 550px;
+	margin-top: -30px;
+}
+
+.lower-button {
+	margin-top: 70px;
+}
+
+.button-container {
+	height: 180px;
+	width: 180px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	background-color: black;
+}
+
+.button {
+	height: 150px;
+	width: 150px;
+	border-radius: 50%;
+	border: none;
+	background-color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+@media screen and (max-width:500px) {
+	.button-container {
+		height: 150px;
+		width: 150px;
+	}
+
+	.button {
+		height: 130px;
+		width: 130px;
+	}
+}
+
+#rock,
+.rock {
+	background: linear-gradient(0deg, hsl(349, 71%, 52%), hsl(349, 70%, 56%) 100%);
+}
+
+#paper,
+.paper {
+	background: linear-gradient(0deg, hsl(230, 89%, 62%), hsl(230, 89%, 65%) 100%);
+}
+
+#scissors,
+.scissors {
+	background: linear-gradient(0deg, hsl(39, 89%, 49%), hsl(40, 84%, 53%) 100%);
+}
+
+.computer-selection {
+	width: 50vw;
+	min-width: 375px;
+	max-width: 700px;
+	height: 500px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	/* justify-content: space-between; */
+	display: none;
+	margin: 0;
+}
+
+.selection-section {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.result {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	transform: translateY(-150px);
+}
+
+#result {
+	font-size: 50px;
+	margin: 0;
+}
+
+.result button {
+	padding: 5px 10px;
+	font-size: 25px;
+	margin-top: 10px;
+	border-radius: 5px;
+	width: 100%;
+}
+
+@media screen and (max-width:1170px) {
+	.result {
+		transform: none;
+		margin-top: 40px;
+	}
+
+	.user-selection {
+		padding-top: 20px;
+	}
+}
+
+.selections {
+	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0;
+}
+
+.rules-layer {
+	position: absolute;
+	/* background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.7906512946975666) 41%, rgba(255, 255, 255, 0) 100%); */
+	height: 100vh;
+	width: 100vw;
+	display: none;
+	align-items: center;
+	justify-content: center;
+	color: hsl(229, 25%, 31%);
+}
+
+.rules-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: white;
+	/* padding: 0px 75px 50px 75px; */
+	width: 25vw;
+	min-width: 375px;
+	border-radius: 20px;
+}
+
+.rules-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 100%;
+	/* background-color: red; */
+	font-size: 25px;
+	padding: 0px 30px;
+	box-sizing: border-box;
+}
+
+
+.rules-container img {
+	width: 90%;
+	margin-bottom: 30px;
+}
+
+#rules-button {
+	position: fixed;
+	right: 7%;
+	bottom: 7%;
+	font-size: 20px;
+	padding: 5px 30px;
+	border-radius: 8px;
+	background-color: transparent;
+	color: white;
+	border: 2px solid white;
+}
+
+#close-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: transparent;
+}
+
+#close-button img {
+	margin: 0;
+}
+
+@media screen and (max-width:500px) {
+	#rules-button {
+		bottom: 2%;
+	}
 }
